Update ddms (all) and 'android' (linux/mac) to user explicit classpath
They were still using the old method of providing a jar folder
through java.ext.dirs in which to look for jar files.

The jar dependency is now explicit in the manifest, which allows
us to target ddmlib explicitely and not ddmlib-prebuilt.

Change-Id: Ic3c5708ab327a3e1fb7a7cd86fffda96e0d988dd